@@ -9,6 +9,7 @@ use Path::Tiny qw(path);
 my ($infile, $outfile);
 my $url = '';
 my $class;
+my $id;
 my $force;
 
 GetOptions(
@@ -16,6 +17,7 @@ GetOptions(
 	'outfile=s' => \$outfile,
 	'url=s'     => \$url,
 	'class'     => \$class,
+	'id'        => \$id,
 	'force'     => \$force,
 ) or usage();
 usage() if not $infile or not $outfile;
@@ -30,6 +32,7 @@ sub main {
 	my $parser = Text::Trac->new(
 		trac_url      => $url,
 		class         => $class,
+		id            => $id,
 	#	disable_links => [ qw( changeset ticket ) ],
 	);
 	$parser->parse( path($infile)->slurp_utf8 );
@@ -45,6 +48,7 @@ Usage: $0
 
     --url http://...      ()
     --class               Include class="" in the HTML tags.
+    --id                  Include id="" in the HTML tags.
     --force               Overwrite exisiting html file.
 END_USAGE
 	exit;
