@@ -1,6 +1,7 @@
 Revision history for Text-Trac
 
 
+    Add --id flag to include ids in the html files. Default to noid.
     Add --force flag to the command line script to overwrite exisiting file.
     Default of script/trac2html is to exclude class=""
 
